--- a/src/MassTransit.QuartzIntegration.Tests/packages.config
+++ b/src/MassTransit.QuartzIntegration.Tests/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.0.0" targetFramework="net40" />
   <package id="Magnum" version="2.1.0" targetFramework="net40" />
   <package id="MassTransit" version="2.7.0" targetFramework="net40" />
-  <package id="Quartz" version="2.0.1" targetFramework="net40" />
+  <package id="NUnit" version="2.6.2" targetFramework="net40" />
+  <package id="NUnit.Runners" version="2.6.2" />
 </packages>
