--- a/src/MassTransit.QuartzIntegration/MassTransit.QuartzIntegration.csproj
+++ b/src/MassTransit.QuartzIntegration/MassTransit.QuartzIntegration.csproj
@@ -58,8 +58,7 @@
     <Compile Include="PublishJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduledPublishCommand.cs" />
-    <Compile Include="TaskSchdulerService.cs" />
-    <Compile Include="Contracts\CommandTaskScheduler.cs" />
+    <Compile Include="ScheduleMessageConsumer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
