--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\MassTransit.Quartz\packages.config" />
   <repository path="..\MassTransit.QuartzIntegration.Tests\packages.config" />
+  <repository path="..\MassTransit.QuartzIntegration\packages.config" />
+  <repository path="..\MassTransit.QuartzService\packages.config" />
   <repository path="..\MassTransit.Scheduling\packages.config" />
 </repositories>
