Tuned up logging configuration for unit tests

--- a/src/MassTransit.QuartzIntegration.Tests/log4net.config
+++ b/src/MassTransit.QuartzIntegration.Tests/log4net.config
@@ -3,17 +3,12 @@
   <root>
     <level value="INFO" />
     <appender-ref ref="Console" />
+    <appender-ref ref="LogFile" />
   </root>
 
-  <logger name="Topshelf">
-    <level value="INFO" />
-    <appender-ref ref="LogFile" />
-  </logger>
-
-  <logger name="MassTransit">
-    <level value="WARN" />
-    <appender-ref ref="LogFile" />
-  </logger>
+  <logger name="MassTransit.QuartzIntegration">
+    <level value="DEBUG" />
+q  </logger>
 
   <logger name="NHibernate">
     <level value="WARN" />
