--- a/src/MassTransit.Scheduling/MassTransit.Scheduling.csproj
+++ b/src/MassTransit.Scheduling/MassTransit.Scheduling.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CancelScheduledMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduledMessage.cs" />
     <Compile Include="ScheduleMessage.cs" />
