--- a/src/MassTransit.QuartzService/app.config
+++ b/src/MassTransit.QuartzService/app.config
@@ -1,5 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <section name="quartz" type="System.Configuration.NameValueSectionHandler, System, Version=1.0.5000.0,Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
+    <sectionGroup name="common">
+      <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging"/>
+    </sectionGroup>
+  </configSections>
+  <common>
+    <logging>
+      <factoryAdapter type="Common.Logging.Simple.ConsoleOutLoggerFactoryAdapter, Common.Logging">
+        <arg key="showLogName" value="true"/>
+        <arg key="showDataTime" value="true"/>
+        <arg key="level" value="INFO"/>
+        <arg key="dateTimeFormat" value="HH:mm:ss:fff"/>
+      </factoryAdapter>
+    </logging>
+  </common>
+  <quartz>
+    <add key="quartz.scheduler.instanceName" value="MassTransit-Quartz"/>
+    <add key="quartz.scheduler.instanceId" value="AUTO"/>
+
+    <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz"/>
+    <add key="quartz.threadPool.threadCount" value="4"/>
+    <add key="quartz.threadPool.threadPriority" value="2"/>
+
+    <add key="quartz.jobStore.clustered" value="true"/>
+    <add key="quartz.jobStore.misfireThreshold" value="60000"/>
+    <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz"/>
+    <add key="quartz.jobStore.useProperties" value="true"/>
+    <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.SqlServerDelegate, Quartz"/>
+    <!--  <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.StdAdoDelegate, Quartz"/>-->
+    <add key="quartz.jobStore.tablePrefix" value="QRTZ_"/>
+    <add key="quartz.jobStore.dataSource" value="quartzDS"/>
+    <add key="quartz.dataSource.quartzDS.connectionString" value="Server=.;Database=quartz;Integrated Security=SSPI"/>
+    <add key="quartz.dataSource.quartzDS.provider" value="SqlServer-20"/>
+    <!--  <add key="quartz.dataSource.quartzDS.provider" value="SQLite-10"/>-->
+  </quartz>
+  <appSettings>
+    <add key="Scheme" value="rabbitmq" />
+    <add key="MSMQHost" value="localhost" />
+    <add key="RabbitMQHost" value="localhost" />
+    <add key="RabbitMQVirtualHost" value="" />
+    <add key="RabbitMQUsername" value="guest" />
+    <add key="RabbitMQPassword" value="guest" />
+    <add key="ControlQueueName" value="masstransit_quartz_scheduler" />
+    <add key="ConsumerLimit" value="1" />
+  </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
