refactored cancel out of the schedule consumer

--- a/src/MassTransit.QuartzIntegration/MassTransit.QuartzIntegration.csproj
+++ b/src/MassTransit.QuartzIntegration/MassTransit.QuartzIntegration.csproj
@@ -54,9 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CancelScheduledMessageConsumer.cs" />
     <Compile Include="MessagePublishJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduleMessageConsumer.cs" />
+    <Compile Include="ScheduleMessageJobBuilder.cs" />
+    <Compile Include="ScheduleMessageJobBuilderImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
