--- a/src/MassTransit.QuartzIntegration/packages.config
+++ b/src/MassTransit.QuartzIntegration/packages.config
@@ -3,5 +3,6 @@
   <package id="Common.Logging" version="2.0.0" targetFramework="net40" />
   <package id="Magnum" version="2.1.0" targetFramework="net40" />
   <package id="MassTransit" version="2.7.0" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net40" />
   <package id="Quartz" version="2.0.1" targetFramework="net40" />
 </packages>
