--- a/src/MassTransit.QuartzService/log4net.config
+++ b/src/MassTransit.QuartzService/log4net.config
@@ -13,7 +13,11 @@
   <logger name="MassTransit">
     <level value="WARN" />
   </logger>
-
+  
+  <logger name="MassTransit.QuartzService">
+    <level value="INFO" />
+  </logger>
+   
   <logger name="NHibernate">
     <level value="WARN" />
   </logger>
