--- a/src/MassTransit.QuartzService/app.config
+++ b/src/MassTransit.QuartzService/app.config
@@ -22,17 +22,30 @@
     <add key="quartz.threadPool.type" value="Quartz.Simpl.SimpleThreadPool, Quartz" />
     <add key="quartz.threadPool.threadCount" value="4" />
     <add key="quartz.threadPool.threadPriority" value="2" />
-    <add key="quartz.jobStore.clustered" value="true" />
     <add key="quartz.jobStore.misfireThreshold" value="60000" />
-    <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz" />
-    <add key="quartz.jobStore.useProperties" value="true" />
-    <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.SqlServerDelegate, Quartz" />
-    <!--  <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.StdAdoDelegate, Quartz"/>-->
-    <add key="quartz.jobStore.tablePrefix" value="QRTZ_" />
-    <add key="quartz.jobStore.dataSource" value="quartzDS" />
-    <add key="quartz.dataSource.quartzDS.connectionString" value="Server=.;Database=quartz;Integrated Security=SSPI" />
-    <add key="quartz.dataSource.quartzDS.provider" value="SqlServer-20" />
-    <!--  <add key="quartz.dataSource.quartzDS.provider" value="SQLite-10"/>-->
+
+
+    <!-- Choose In-Memory or Database -->
+    <!-- In-memory job store -->
+    <add key="quartz.jobStore.type" value="Quartz.Simpl.RAMJobStore, Quartz" />
+<!-- Database job store -->
+<!--    <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz" />-->
+<!--    <add key="quartz.jobStore.useProperties" value="true" />-->
+
+    <!-- Choose SQLite or SQL Server-->
+<!-- SQLite (need assemblies) -->
+<!--      <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.StdAdoDelegate, Quartz"/>-->
+<!--      <add key="quartz.dataSource.quartzDS.provider" value="SQLite-10"/>-->
+<!--      <add key="quartz.dataSource.quartzDS.connectionString" value="Data Source=:memory:;Version=3;New=True;Pooling=True;Max Pool Size=1;" />-->
+
+<!-- SQL SERVER -->
+<!--    <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.SqlServerDelegate, Quartz" />-->
+<!--    <add key="quartz.jobStore.clustered" value="true" />-->
+<!--    <add key="quartz.jobStore.tablePrefix" value="QRTZ_" />-->
+<!--    <add key="quartz.jobStore.dataSource" value="quartzDS" />-->
+<!--    <add key="quartz.dataSource.quartzDS.connectionString" value="Server=.;Database=quartz;Integrated Security=SSPI" />-->
+<!--    <add key="quartz.dataSource.quartzDS.provider" value="SqlServer-20" />-->
+
   </quartz>
   <appSettings>
     <add key="Scheme" value="rabbitmq" />
@@ -41,6 +54,7 @@
     <add key="RabbitMQVirtualHost" value="" />
     <add key="RabbitMQUsername" value="guest" />
     <add key="RabbitMQPassword" value="guest" />
+    <add key="RabbitMQOptions" value=""/>
     <add key="ControlQueueName" value="masstransit_quartz_scheduler" />
     <add key="ConsumerLimit" value="1" />
   </appSettings>
@@ -56,6 +70,14 @@
       <dependentAssembly>
         <assemblyIdentity name="MassTransit" publicKeyToken="b8e0e9f2f1e657fa" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.7.0.0" newVersion="2.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Topshelf" publicKeyToken="b800c4cfcdeea87b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.107.0" newVersion="3.1.107.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="RabbitMQ.Client" publicKeyToken="89e7d7c5feba84ce" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.4.0" newVersion="3.0.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
