Added unit test for past events

--- a/src/MassTransit.QuartzIntegration.Tests/MassTransit.QuartzIntegration.Tests.csproj
+++ b/src/MassTransit.QuartzIntegration.Tests/MassTransit.QuartzIntegration.Tests.csproj
@@ -78,6 +78,7 @@
     </Compile>
     <Compile Include="ContextSetup.cs" />
     <Compile Include="JobDetail_Specs.cs" />
+    <Compile Include="PastEvent_Specs.cs" />
     <Compile Include="Service_Specs.cs" />
     <Compile Include="Syntax_Specs.cs" />
     <Compile Include="Utils.cs" />
