--- a/src/MassTransit.QuartzService/app.config
+++ b/src/MassTransit.QuartzService/app.config
@@ -25,7 +25,7 @@
     <add key="quartz.jobStore.type" value="Quartz.Simpl.RAMJobStore, Quartz" />
     <!-- Database job store -->
     <!--    <add key="quartz.jobStore.type" value="Quartz.Impl.AdoJobStore.JobStoreTX, Quartz" />-->
-    <!--    <add key="quartz.jobStore.useProperties" value="true" />-->
+    <!--    <add key="quartz.jobStore.useProperties" value="false" />-->
     <!-- Choose SQLite or SQL Server-->
     <!-- SQLite (need assemblies) -->
     <!--      <add key="quartz.jobStore.driverDelegateType" value="Quartz.Impl.AdoJobStore.StdAdoDelegate, Quartz"/>-->
