--- a/src/MassTransit.QuartzIntegration.Tests/packages.config
+++ b/src/MassTransit.QuartzIntegration.Tests/packages.config
@@ -6,8 +6,10 @@
   <package id="Magnum" version="2.1.3" targetFramework="net40" />
   <package id="MassTransit" version="2.9.9" targetFramework="net40" />
   <package id="MassTransit.Log4Net" version="2.9.9" targetFramework="net40" />
+  <package id="MassTransit.RabbitMQ" version="2.9.9" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
   <package id="NUnit.Runners" version="2.6.3" />
   <package id="Quartz" version="2.3.0" targetFramework="net40" />
+  <package id="RabbitMQ.Client" version="3.4.0" targetFramework="net40" />
 </packages>
