--- a/src/MassTransit.QuartzIntegration/packages.config
+++ b/src/MassTransit.QuartzIntegration/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="2.3.1" targetFramework="net40" />
+  <package id="Common.Logging" version="3.0.0" targetFramework="net40" />
+  <package id="Common.Logging.Core" version="3.0.0" targetFramework="net40" />
   <package id="Magnum" version="2.1.3" targetFramework="net40" />
-  <package id="MassTransit" version="2.9.9" targetFramework="net40" />
+  <package id="MassTransit" version="2.10.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net40" />
-  <package id="Quartz" version="2.3.0" targetFramework="net40" />
+  <package id="Quartz" version="2.3.2" targetFramework="net40" />
 </packages>
